[project]
name = "srs"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy (>=2.4.2,<3.0.0)",
    "opencv-python (>=4.13.0.92,<5.0.0.0)",
    "watchdog (>=6.0.0,<7.0.0)"
]

[tool.poetry]
packages = [{include = "srs", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
